add model saving code

--- a/unet.ipynb
+++ b/unet.ipynb
@@ -824,7 +824,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model_state_fn = 'model_state.pt'\n",
+    "model_fn = 'model.pt'\n",
+    "local_filepath = \"./\"\n",
+    "model_state_path = os.path.join(local_filepath, model_state_fn)\n",
+    "model_path = os.path.join(local_filepath, model_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(net.state_dict(), model_state_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(net, model_path)"
+   ]
   },
   {
    "cell_type": "markdown",
