--- a/unet.ipynb
+++ b/unet.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alright, so we know that we need the following PyTorch modules to start making this network:\n",
+    "We know that we need the following PyTorch modules to start making this network:\n",
     "* `Conv2d`\n",
     "* `ReLU`\n",
     "* `MaxPool2d`\n",
@@ -331,7 +331,9 @@
     "## Part 2 - Dataset\n",
     "\n",
     "### Preparing the dataset\n",
-    "Next, we wrap our image dataset into a PyTorch `Dataset` object to make it easier to load the data into memory and create batches."
+    "Next, we wrap our image dataset into a PyTorch `Dataset` object to make it easier to load the data into memory and create batches.\n",
+    "\n",
+    "Notably, we are going to decrease the size of the images here to 512x512 so we can have larger batches and training won't take as long. Most of these images are do not have canerous cells and if they do, they make up a small amount of the pixels in the image, so in theory the information loss should be minimal. But if you have the compute power then feel free to keep them at the 1024x1024, you might want to tweak the hyperparameters to the network below though."
    ]
   },
   {
